# Python-QoC

./: README.md  pyproject.toml  requirements-dev.txt
docker/: Dockerfile  docker-compose.yml
src/core/: logger.py
